--- a/style.css
+++ b/style.css
@@ -365,32 +365,12 @@ footer {
 /* Title inside caption */
 .event-caption strong {
     font-family: 'Inter', Arial, sans-serif;
+    text-shadow: 0 0 10px rgba(0,0,0,0.7);
     color: #ffdd57;
     font-size: 1em;
 }
 
 
-/*
-
-
-.page-header {
-    position: relative;
-    width: 100%;
-    height: 30vh;              
-    min-height: 220px;
-    max-height: 420px;
-    overflow: hidden;
-}
-
-
-.page-header img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;         
-    object-position: center;   
-    display: block;
-}
-*/
 
 .page-header {
     position: relative;
@@ -426,18 +406,19 @@ footer {
 }
 
 .header-overlay h1 {
-    color: #ffdd57;
+    color: rgba(255, 221, 87, 0.8); /* semi-transparent white text */
     font-size: clamp(2rem, 5vw, 3.5rem);
-    text-shadow: 0 0 15px rgba(0,0,0,0.6);
+    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.6); /* subtle shadow effect */
     margin: 0;
-    transform: translateY(-15%); /* Moves the title 10% upwards */
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6); /* shadow effect */
+    transform: translateY(-30%); /* Moves the title upwards */
 }
+
+
 
 .external-link {
     display: inline-block;
     margin: 10px 0;
-    color: #ffdd57;
+    color: rgba(255, 221, 87, 1);
     font-weight: bold;
     text-decoration: none;
     transition: opacity 0.2s, transform 0.2s;
@@ -577,7 +558,7 @@ footer {
 }
 
 .cta-link img {
-    max-width:25%;          /* image will not exceed container width */
+    max-width:30%;          /* image will not exceed container width */
     height: auto;            /* keep aspect ratio */
     display: block;          /* remove small bottom spacing */
 }
